增加video的配置项

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mola-video",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A mola component",
   "main": "lib/Video.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "classnames": "^2.2.5",
     "mola": "^1.0.0",
     "react": "^0.14.8",
+    "react-addons-update": "^0.14.8",
     "react-dom": "^0.14.8"
   },
   "devDependencies": {
