--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mola-video",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A mola component",
   "main": "lib/Video.js",
   "scripts": {
@@ -27,9 +27,9 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "mola": "^1.0.0",
-    "react": "^0.14.8",
-    "react-addons-update": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react": "^0.14.8||^15.4.0",
+    "react-addons-update": "^0.14.8||^15.4.0",
+    "react-dom": "^0.14.8||^15.4.0"
   },
   "devDependencies": {
     "babel-istanbul": "^0.11.0",
